{{$NEXT}}

0.03      2012-07-07 12:18:08 America/Denver
         - Handle circular references to avoid deep recursion
           [RT#78222] (garu)

0.02      2012-05-02 14:50:01 America/Denver
          - Migrate from MooX::Types::MooseLike
          to MooX::Types::MooseLike::Base

0.01      2011-11-17 15:11:59 America/Denver
          - Initial Release