@@ -1,4 +1,5 @@
 {{$NEXT}}
+         - Add a method to delete undefined and empty string hash values
 
 0.03      2012-07-07 12:18:08 America/Denver
          - Handle circular references to avoid deep recursion
